# lol-cv

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
configs/: default.yaml
data/: .gitignore  champion_picks.json  champion_picks_raw.json  game_winners.json  match_metadata.json
docs/: Project Data Science Q3; 202500300,202500301 (2025-2A).md  design.md  email.md  feature_categories_v2_report.md  lolesports_api_reference.md  new-email.md  new_results.md  presentation_outline.md  presentation_outline_v2.md  project_plan.md  project_status.md  research_landscape.md  results.md  spectator_hud_layout.md  zone_mask_migration_report.md
scripts/: build_categories_v2.py  build_critical_charts.py  build_migration_comparison.py  build_presentation_charts_v2.py  build_supporting_charts.py  build_targets.py  build_zone_mask_overlay.py  extract_mask_colors.py  extract_slide_frames.py  fetch_game_winners.py  ingest_vods.py  overlay_zones.py  rerun_categories_v2.py  run_analysis.py  run_benchmark.py  run_detection.py  run_features.py  run_ocr.py  validate_ocr.py
src/lol_cv/: __init__.py  pipeline.py
src/lol_cv/analysis/: __init__.py  classifiers.py  clustering.py
src/lol_cv/extraction/: __init__.py  api.py  benchmark.py  match_metadata.py  minimap.py  ocr.py  vlm.py  vod_discovery.py  vod_processor.py
src/lol_cv/features/: __init__.py  spatial.py  temporal.py
src/lol_cv/utils/: __init__.py  (+3 more)
tests/: test_benchmark.py  test_fetch_game_winners.py  test_ocr.py  test_pipeline.py  test_run_analysis.py  test_spatial.py  test_temporal.py  test_vod_processor.py
(+2 files in other folders)
