[project]
name = "lol-cv-analysis"
version = "0.1.0"
description = "Computer Vision Analysis of League of Legends Replays for Performance Insight"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Wong Kang" },
    { name = "Zachary Muk Chen Eu" },
]

dependencies = [
    # Core ML & CV
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.1.0",       # YOLOv8-v12
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",

    # Data processing & analysis
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # OCR
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",

    # Embeddings & API clients
    "google-genai>=1.0.0",      # Gemini API (embeddings + vision)

    # Utilities
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",

    # pyLoL (LoL Replay Extractor) - installed from GitHub
    "autoLeague @ git+https://github.com/league-of-legends-replay-extractor/pyLoL.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
